k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: habits-app
  labels:
    name: habits-app
