k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: habits-api-service
  namespace: habits-app
spec:
  type: LoadBalancer
  selector:
    app: habits-api
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
